--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -254,7 +254,9 @@ nav li a:active{
 /*----------------------------------------------*/
 /* HOW IT WORKS SECTION*/
 /*----------------------------------------------*/
-
+.how-it-works{
+    background-color: #F7F8FA;
+}
 
 /*----------------------------------------------*/
 /* CHEF'S GALLERY SECTION*/
