--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -496,7 +496,7 @@ input[type=submit]{
 /*----------------------------------------------*/
 
 footer{
-    background-color:#fa5102;
+    background-color:#333;
     padding: 50px;
 }
 
